# drone_ws

./: .gitmodules  README.md
src/px4_description/: CMakeLists.txt  package.xml
src/px4_description/meshes/: 1345_prop_ccw_moved_origin.stl  1345_prop_cw_moved_origin.stl  5010Base.dae  5010Base.stl  5010Bell.stl  NXP-HGD-CF.stl
src/px4_description/src/: dynamic_joint_state.py  move_drone.py
src/px4_description/urdf/: px4_description.xacro
src/urdf_launch/launch/: display.launch.py
